--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy:gh":"ng build --prod --base-href='https://vinay01joshi.github.io/followers-angular4-app/ && ngh"
   },
   "private": true,
   "dependencies": {
